Trying to add required flags to run druid using java 17 (#130)